# buildpub

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
buildpub/: main.py
